--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "peer": "peerjs --port 3001",
     "devStart": "nodemon server.js"
   },
   "author": "",
@@ -13,6 +14,7 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "peer": "^0.5.3",
+    "peerjs": "^1.3.1",
     "socket.io": "^2.3.0",
     "uuid": "^8.1.0"
   },
